# rx-ranges

./: .clang-format  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
include/rx/: ranges.hpp
test/: benchmark.cpp  calendar.cpp  test_ranges.cpp
